--- a/style-guide/style.css
+++ b/style-guide/style.css
@@ -19,7 +19,7 @@ p {
     border: solid black 1px;
 }
 
-#one, #two, #three, #four {
+#one, #two, #three, #four, #five {
     grid-row: 2;
 }
 
@@ -37,6 +37,10 @@ p {
 
 #four {
     background-color: #000000;
+}
+
+#five {
+    background-color: #7FCC68;
 }
 
 main {
