Slightly darker green

--- a/style-guide/style.css
+++ b/style-guide/style.css
@@ -40,7 +40,7 @@ p {
 }
 
 #five {
-    background-color: #7FCC68;
+    background-color: #35AD6B;
 }
 
 main {
@@ -56,13 +56,13 @@ div {
 }
 
 #headline-one {
-    background-color: #7FCC68;
+    background-color: #35AD6B;
     max-width: 18%;
     box-shadow: 3px 3px 3px 3px #003155;
 }
 
 #headline-two {
-    color: #7FCC68;
+    color: #35AD6B;
     font-size: xxx-large;
 }
 
