--- a/week05/styles.css
+++ b/week05/styles.css
@@ -1,15 +1,11 @@
-.row-grid {
-    display: flex;
-    flex-wrap: wrap-reverse;
-    margin-bottom: 500px;
-    border: 3px solid pink;
+body {
+    margin: 20%;
 }
 
-.row-grid img {
-    max-height: 100%;
+.row-grid {
+
 }
 
 .row-grid > * {
-    border: 1px solid grey;
-    justify-content: space-between;
+
 }
